# redditvis

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  start_container.sh  start_dev_container.sh
src/: __init__.py
src/api/: __init__.py  events.py  idea_data_format_graph.json  routes.py
src/api/helpers/: body_data_transformer.py  network_graph_helper.py  node_attribute_transformer.py  sentiment_box_helper.py
src/api/model/: body_model.py
src/app/: __init__.py  routes.py
src/client/: __init__.py  routes.py
src/client/static/: aggregate_component.js  aggregate_container.js  aggregates.js  app_container.js  context.js  correlation_plot.js  example_plot.js  filters.js  graph_network.js  index.js  info_button.js  plot_source_target.js  properties_plot.js  properties_radar.js  raw_data_section.js  select_subreddit.js  sentiment_box.js  sidebar_container.js
src/client/static/assets/: bezier.js  dark-theme.css  index_by.js  styles.css
src/client/templates/: base.html  index.html  navbar.html  raw_data_section.html  vue.html
src/data/: .gitkeep
src/templates/: base.html  index.html
test/: __init__.py  test_network_graph_helper.py
