[tool.poetry]
name = "infovis-reddit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
bokeh = "^2.2.3"
pandas = "^1.2.2"
python-dotenv = "^0.15.0"
fastparquet = "^0.5.0"
Flask-SocketIO = "^5.0.1"
eventlet = "^0.30.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
