[tool.poetry]
name = "infovis-reddit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
Flask = "^1.1.2"
bokeh = "2.3.0"
pandas = "^1.2.2"
python-dotenv = "^0.15.0"
Flask-SocketIO = "^5.0.1"
eventlet = "^0.30.1"
pyarrow = "^3.0.0"
networkx = "^2.5"
plotly = "^4.14.3"
plotly-express = "^0.4.1"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
